--- a/fans.html
+++ b/fans.html
@@ -27,12 +27,12 @@
                 <li class="navlink"><a href="#">Contacts</a></li>
                 <li class="navlink"><a href="#">Admin</a></li>
             </ul>
-        <div class="logo "><img src="/img/kendo-icons-6.png" alt="" srcset=""></div>
+        <div class="logo "><img src="../img/kendo-icons-6.png" alt="" srcset=""></div>
     </div>  
     </nav>
     <div class="clear3"></div>
         <content class="content-fans">
-            <div id="bgimage"><img src="/img/favpng_young-samurai-the-way-of-the-sword-kenjutsu-kendo-japanese-martial-arts.png"></div>
+            <div id="bgimage"><img src="./img/favpng_young-samurai-the-way-of-the-sword-kenjutsu-kendo-japanese-martial-arts.png"></div>
                <h2 class="section-hedaer">Звернення</h2>
                <div id="bgimage"></div>
                <div class="text-content text-content-fan "><div c></div>
