--- a/fans.html
+++ b/fans.html
@@ -27,7 +27,7 @@
                 <li class="navlink"><a href="#">Contacts</a></li>
                 <li class="navlink"><a href="#">Admin</a></li>
             </ul>
-        <div class="logo "><img src="../img/kendo-icons-6.png" alt="" srcset=""></div>
+        <div class="logo "><img src="./img/kendo-icons-6.png" alt="" srcset=""></div>
     </div>  
     </nav>
     <div class="clear3"></div>
