--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
                     <li class="navlink checked"><a href="index.html">Main</a></li>
                     <li class="navlink"><a href="#">Matches</a>
                         <div class="sub-menu">
+                            <ul class="sub-menu-ul">
+                                <li class="navlink checked"><a href="#">Calender of maches</a></li>
+                            </ul>
                         <ul class="sub-menu-ul">
-                            <li class="navlink checked"><a href="index.html">Main</a></li>
+                            <li class="navlink"><a href="#">Next game</a></li>
                         </ul>
                         <ul class="sub-menu-ul">
-                            <li class="navlink"><a href="fans.html">Fans</a></li>
+                            <li class="navlink"><a href="#">Rating</a></li>
                         </ul></div>
                     </li>
                     <li class="navlink"><a href="#">News</a></li>
@@ -38,24 +41,29 @@
             <li class="navlink"><a href="#">Matches</a>
                 <div class="sub-menu">
                 <ul class="sub-menu-ul">
-                    <li class="navlink checked"><a href="index.html">Main</a></li>
+                    <li class="navlink checked "><a href="index.html">Calender of maches</a></li>
                 </ul>
                 <ul class="sub-menu-ul">
-                    <li class="navlink"><a href="fans.html">Fans</a></li>
-                </ul></div>
+                    <li class="navlink"><a href="fans.html">Next game</a></li>
+                </ul>
+                <ul class="sub-menu-ul">
+                    <li class="navlink"><a href="fans.html">Rating</a></li>
+                </ul>
+            </div>
+                
             </li>
             <li class="navlink"><a href="#">News</a></li>
             <li class="navlink"><a href="fans.html">Fans</a></li>
             <li class="navlink"><a href="#">Contacts</a></li>
             <li class="navlink"><a href="#">Admin</a></li>
         </ul>
-        <div class="logo "><img src="./img/kendo-icons-6.png" alt="" srcset=""></div>
+        <div class="logo "><img src="/img/Logo.png" alt="" srcset=""></div>
     </div>  
     </nav>
     <div class="clear"></div>
     <div class="clear"></div>
         <content class="content">
-        <div class="banner"><img  src="./img/kisspng-kendo-the-way-of-the-sword-iaijutsu-iaid-sport-5b10987ca1ff79.6603711815278142686636.png" alt="" srcset=""></div>
+        <div class="banner"><img  src="/img/kisspng-kendo-the-way-of-the-sword-iaijutsu-iaid-sport-5b10987ca1ff79.6603711815278142686636.png" alt="" srcset=""></div>
         <section class="section">
             <h2 class="section-hedaer">Історія</h2>
             <div class="text-content">
