--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             <li class="navlink"><a href="#">Contacts</a></li>
             <li class="navlink"><a href="#">Admin</a></li>
         </ul>
-        <div class="logo "><img src="/img/Logo.png" alt="" srcset=""></div>
+        <div class="logo "><img src="./img/Logo.png" alt="" srcset=""></div>
     </div>  
     </nav>
     <div class="clear"></div>
     <div class="clear"></div>
         <content class="content">
-        <div class="banner"><img  src="/img/kisspng-kendo-the-way-of-the-sword-iaijutsu-iaid-sport-5b10987ca1ff79.6603711815278142686636.png" alt="" srcset=""></div>
+        <div class="banner"><img  src="./img/kisspng-kendo-the-way-of-the-sword-iaijutsu-iaid-sport-5b10987ca1ff79.6603711815278142686636.png" alt="" srcset=""></div>
         <section class="section">
             <h2 class="section-hedaer">Історія</h2>
             <div class="text-content">
