changed focus on icon

--- a/fans.html
+++ b/fans.html
@@ -13,18 +13,22 @@
         <div class="burger"><span></span>
             <div class="burger-menu">
                 <ul class="navigation width-content">
-                    <li class="navlink checked"><a href="index.html">Main</a></li>
+                    <li class="navlink"><a href="index.html">Main</a></li>
                     <li class="navlink"><a href="#">Matches</a>
                         <div class="sub-menu">
                         <ul class="sub-menu-ul">
-                            <li class="navlink "><a href="index.html">Main</a></li>
+                            <li class="navlink checked"><a href="#">Calender of maches</a></li>
                         </ul>
                         <ul class="sub-menu-ul">
-                            <li class="navlink checked"><a href="fans.html">Fans</a></li>
-                        </ul></div>
+                            <li class="navlink"><a href="#">Next game</a></li>
+                        </ul>
+                        <ul class="sub-menu-ul">
+                            <li class="navlink"><a href="#">Rating</a></li>
+                        </ul>
+                    </div>
                     </li>
                     <li class="navlink"><a href="#">News</a></li>
-                    <li class="navlink"><a href="fans.html">Fans</a></li>
+                    <li class="navlink checked"><a href="fans.html">Fans</a></li>
                     <li class="navlink"><a href="#">Contacts</a></li>
                     <li class="navlink"><a href="#">Admin</a></li>
                 </ul>
@@ -35,17 +39,17 @@
             <ul class="navigation width-content">
                 <li class="navlink "><a href="index.html">Main</a></li>
                 <li class="navlink"><a href="#">Matches</a>
-                    <div class="sub-menu">
-                        <ul class="sub-menu-ul">
-                            <li class="navlink checked "><a href="index.html">Calender of maches</a></li>
-                        </ul>
-                        <ul class="sub-menu-ul">
-                            <li class="navlink"><a href="fans.html">Next game</a></li>
-                        </ul>
-                        <ul class="sub-menu-ul">
-                            <li class="navlink"><a href="fans.html">Rating</a></li>
-                        </ul>
-                    </div>
+                     <div class="sub-menu">
+                <ul class="sub-menu-ul">
+                    <li class="navlink checked "><a href="index.html">Calender of maches</a></li>
+                </ul>
+                <ul class="sub-menu-ul">
+                    <li class="navlink"><a href="fans.html">Next game</a></li>
+                </ul>
+                <ul class="sub-menu-ul">
+                    <li class="navlink"><a href="fans.html">Rating</a></li>
+                </ul>
+            </div>
                 </li>
                 <li class="navlink"><a href="#">News</a></li>
                 <li class="navlink checked"><a href="fans.html">Fans</a></li>
