fixed scroll fans

--- a/fans.html
+++ b/fans.html
@@ -36,7 +36,7 @@
             
         </div>
         <div class="flex">
-            <ul class="navigation width-content">
+            <ul class="navigation ">
                 <li class="navlink "><a href="index.html">Main</a></li>
                 <li class="navlink"><a href="#">Matches</a>
                      <div class="sub-menu">
