--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li class="navlink"><a href="#">Matches</a>
                         <div class="sub-menu">
                             <ul class="sub-menu-ul">
-                                <li class="navlink checked"><a href="#">Calendar of maches</a></li>
+                                <li class="navlink checked"><a href="#">Calendar of matches</a></li>
                             </ul>
                         <ul class="sub-menu-ul">
                             <li class="navlink"><a href="#">Next game</a></li>
