--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="navlink"><a href="#">Matches</a>
                 <div class="sub-menu">
                 <ul class="sub-menu-ul">
-                    <li class="navlink checked "><a href="index.html">Calendar of maches</a></li>
+                    <li class="navlink checked "><a href="index.html">Calendar of matches</a></li>
                 </ul>
                 <ul class="sub-menu-ul">
                     <li class="navlink"><a href="fans.html">Next game</a></li>
