--- a/fans.html
+++ b/fans.html
@@ -59,7 +59,7 @@
         <div class="logo "><img src="./img/Logo.png" alt="" srcset=""></div>
     </div>  
     </nav>
-    <div class="clear3"></div>
+    <header class="clear3"></header>
         <content class="content-fans">
             <div id="bgimage"><img src="./img/favpng_young-samurai-the-way-of-the-sword-kenjutsu-kendo-japanese-martial-arts.png"></div>
                <h2 class="section-hedaer">Звернення</h2>
