--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="logo "><img src="./img/Logo.png" alt="" srcset=""></div>
     </div>  
     </nav>
-    <header="clear"></header>
     <div class="clear"></div>
+    <header class="clear3"></header>
         <content class="content">
         <div class="banner"><img  src="./img/kisspng-kendo-the-way-of-the-sword-iaijutsu-iaid-sport-5b10987ca1ff79.6603711815278142686636.png" alt="" srcset=""></div>
         <section class="section">
