--- a/fans.html
+++ b/fans.html
@@ -41,13 +41,13 @@
                 <li class="navlink"><a href="#">Matches</a>
                      <div class="sub-menu">
                 <ul class="sub-menu-ul">
-                    <li class="navlink checked "><a href="#">Calendar of matches</a></li>
+                    <li class="navlink checked "><a href="index.html">Calendar of matches</a></li>
                 </ul>
                 <ul class="sub-menu-ul">
-                    <li class="navlink"><a href="#">Next game</a></li>
+                    <li class="navlink"><a href="fans.html">Next game</a></li>
                 </ul>
                 <ul class="sub-menu-ul">
-                    <li class="navlink"><a href="#">Rating</a></li>
+                    <li class="navlink"><a href="fans.html">Rating</a></li>
                 </ul>
             </div>
                 </li>
@@ -59,12 +59,12 @@
         <div class="logo "><img src="./img/Logo.png" alt="" srcset=""></div>
     </div>  
     </nav>
-    <header class="clear3"></header>
+    <div class="clear3"></div>
         <content class="content-fans">
             <div id="bgimage"><img src="./img/favpng_young-samurai-the-way-of-the-sword-kenjutsu-kendo-japanese-martial-arts.png"></div>
                <h2 class="section-hedaer">Звернення</h2>
                <div id="bgimage"></div>
-               <div class="text-content text-content-fan "><div c></div>
+               <div class="text-content text-content-fan "><div></div>
             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsa laboriosam itaque suscipit distinctio numquam fugiat illo accusamus minus nemo neque repudiandae necessitatibus incidunt, esse, placeat pariatur nobis asperiores ratione.
             Reiciendis non beatae consectetur ex iste aspernatur expedita asperiores. Rem dolorem sed pariatur at dolorum iusto nemo, animi, laudantium est ad excepturi perferendis quasi blanditiis quo tempore, officiis neque delectus!
             Obcaecati pariatur magnam aliquam quod, deserunt non possimus officiis repellendus illo fugiat debitis aperiam atque assumenda veritatis voluptatibus nemo ullam. Tenetur neque perspiciatis asperiores blanditiis nulla nam accusantium iusto quidem.
@@ -74,7 +74,7 @@
                 <div class="username">KendoFan</div>
             </div>
         </div>
-        <div class="text-content text-content-fan ">
+        <div class="text-content text-content-fan lastHardcode">
             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsa laboriosam itaque suscipit distinctio numquam fugiat illo accusamus minus nemo neque repudiandae necessitatibus incidunt, esse, placeat pariatur nobis asperiores ratione.
                 Reiciendis non beatae consectetur ex iste aspernatur expedita asperiores. Rem dolorem sed pariatur at dolorum iusto nemo, animi, laudantium est ad excepturi perferendis quasi blanditiis quo tempore, officiis neque delectus!
                 Obcaecati pariatur magnam aliquam quo</p>
@@ -90,6 +90,7 @@
     </content>
     <div class="clear"></div>
     <footer class="footer"><div class="footer-text">2021</div></footer>
+    <script src="./fans.js" type="text/JavaScript"></script> 
 </body>
 </div>
 </html>
