--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             <li class="navlink"><a href="#">Matches</a>
                 <div class="sub-menu">
                 <ul class="sub-menu-ul">
-                    <li class="navlink checked "><a href="#">Calendar of matches</a></li>
+                    <li class="navlink checked "><a href="index.html">Calendar of matches</a></li>
                 </ul>
                 <ul class="sub-menu-ul">
-                    <li class="navlink"><a href="#">Next game</a></li>
+                    <li class="navlink"><a href="fans.html">Next game</a></li>
                 </ul>
                 <ul class="sub-menu-ul">
-                    <li class="navlink"><a href="#">Rating</a></li>
+                    <li class="navlink"><a href="fans.html">Rating</a></li>
                 </ul>
             </div>
                 
