deleted the line after comment

--- a/fans.html
+++ b/fans.html
@@ -64,7 +64,7 @@
             <div id="bgimage"><img src="./img/favpng_young-samurai-the-way-of-the-sword-kenjutsu-kendo-japanese-martial-arts.png"></div>
                <h2 class="section-hedaer">Останні повідомлення</h2>
                <div id="bgimage"></div>
-               <div class="text-content text-content-fan "><div></div>
+               <div class="text-content text-content-fan ">
             <p class="paragraph">Для тих, хто хоче засвоїти техніку японського фехтування, пропонуємо звертатися у Львівський клуб кендо «Lviv Kendo Kai»! У них є набір в групи для дорослих та дітей. Тому звертайтеся за адресою: Львівська гімназія міжнародних відносин ім. В.Стуса, вул. Повстанська, 14, м. Львів. А детальнішу інформацію можна отримати тут: www.facebook.com/pg/LvivKendoKai.</p>
             <div class="fotter-message flex">
                 <div class="date">21.09.21, 21:14</div>
@@ -77,8 +77,8 @@
                 <div class="date">21.09.21, 11:25</div>
                 <div class="username">Petro Ivanovych</div>
             </div>
-            <div class="lastHardcode"></div>
-        </div>
+           </div>
+           <div class="afterHardcode"></div>
         <div class="fan-comment-fields flex-spb text-content">
 <textarea name="fan-message" id="fan-message" placeholder="Написати звернення..."></textarea>
 <button class="button">Send</button>
