--- a/fans.html
+++ b/fans.html
@@ -64,22 +64,20 @@
             <div id="bgimage"><img src="./img/favpng_young-samurai-the-way-of-the-sword-kenjutsu-kendo-japanese-martial-arts.png"></div>
                <h2 class="section-hedaer">Останні повідомлення</h2>
                <div id="bgimage"></div>
-               <div class="text-content text-content-fan ">
+               <div class="text-content text-content-fan "><div></div>
             <p class="paragraph">Для тих, хто хоче засвоїти техніку японського фехтування, пропонуємо звертатися у Львівський клуб кендо «Lviv Kendo Kai»! У них є набір в групи для дорослих та дітей. Тому звертайтеся за адресою: Львівська гімназія міжнародних відносин ім. В.Стуса, вул. Повстанська, 14, м. Львів. А детальнішу інформацію можна отримати тут: www.facebook.com/pg/LvivKendoKai.</p>
             <div class="fotter-message flex">
-                <div class="date">21.09.21, 21:14</div>
+                <div class="date">21.09.2021, 21:14</div>
                 <div class="username">KendoFan</div>
             </div>
         </div>
-        <div class="text-content text-content-fan">
+        <div class="text-content text-content-fan lastHardcode">
             <p class="paragraph">В рамках змагань «Кубок Галичини III» відбуватимуться турніри з кендо. Тож Львівська Обласна Федерація Кендо та клуб «Львів Кендо Кай» запрошують усіх охочих приходити на турніри та семінари з кендо. Побачити та відчути усі особливості цього виду бойового мистецтва можна буде 4 березня о 10:00 за адресою:  м. Львів, вулиця Жовківська, 53.</p>
             <div class="fotter-message flex">
-                <div class="date">21.09.21, 11:25</div>
+                <div class="date">21.09.2021, 11:25</div>
                 <div class="username">Petro Ivanovych</div>
             </div>
-            <div class="afterHardcode"></div>
-           </div>
-           
+        </div>
         <div class="fan-comment-fields flex-spb text-content">
 <textarea name="fan-message" id="fan-message" placeholder="Написати звернення..."></textarea>
 <button class="button">Send</button>
