--- a/fans.html
+++ b/fans.html
@@ -71,13 +71,14 @@
                 <div class="username">KendoFan</div>
             </div>
         </div>
-        <div class="text-content text-content-fan lastHardcode">
+        <div class="text-content text-content-fan">
             <p class="paragraph">В рамках змагань «Кубок Галичини III» відбуватимуться турніри з кендо. Тож Львівська Обласна Федерація Кендо та клуб «Львів Кендо Кай» запрошують усіх охочих приходити на турніри та семінари з кендо. Побачити та відчути усі особливості цього виду бойового мистецтва можна буде 4 березня о 10:00 за адресою:  м. Львів, вулиця Жовківська, 53.</p>
             <div class="fotter-message flex">
                 <div class="date">21.09.2021, 11:25</div>
                 <div class="username">Petro Ivanovych</div>
             </div>
         </div>
+        <div class="lastHardcode"></div>
         <div class="fan-comment-fields flex-spb text-content">
 <textarea name="fan-message" id="fan-message" placeholder="Написати звернення..."></textarea>
 <button class="button">Send</button>
