added if else to ystd ver

--- a/fans.html
+++ b/fans.html
@@ -66,9 +66,7 @@
                <div id="bgimage"></div>
                <div class="text-content text-content-fan "><div></div>
             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsa laboriosam itaque suscipit distinctio numquam fugiat illo accusamus minus nemo neque repudiandae necessitatibus incidunt, esse, placeat pariatur nobis asperiores ratione.
-            Reiciendis non beatae consectetur ex iste aspernatur expedita asperiores. Rem dolorem sed pariatur at dolorum iusto nemo, animi, laudantium est ad excepturi perferendis quasi blanditiis quo tempore, officiis neque delectus!
-            Obcaecati pariatur magnam aliquam quod, deserunt non possimus officiis repellendus illo fugiat debitis aperiam atque assumenda veritatis voluptatibus nemo ullam. Tenetur neque perspiciatis asperiores blanditiis nulla nam accusantium iusto quidem.
-            Animi ut facere quisquam minus. Minus consectetur nobis, veniam, commodi, aspernatur temporibus aut facilis recusandae suscipit dolore cupiditate. Vitae dolores repellat earum esse maxime quibusdam ipsa dolor tenetur facilis cum.</p>
+            Reiciendis non beatae consectetur ex iste aspernatur expedita asperiores. Rem dolorem sed pariatur at dolorum iusto nemo, animi, laudantium est ad excepturi perferendis quasi blanditiis q</p>
             <div class="fotter-message flex">
                 <div class="date">21.09.2021, 21:14</div>
                 <div class="username">KendoFan</div>
@@ -76,8 +74,7 @@
         </div>
         <div class="text-content text-content-fan lastHardcode">
             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsa laboriosam itaque suscipit distinctio numquam fugiat illo accusamus minus nemo neque repudiandae necessitatibus incidunt, esse, placeat pariatur nobis asperiores ratione.
-                Reiciendis non beatae consectetur ex iste aspernatur expedita asperiores. Rem dolorem sed pariatur at dolorum iusto nemo, animi, laudantium est ad excepturi perferendis quasi blanditiis quo tempore, officiis neque delectus!
-                Obcaecati pariatur magnam aliquam quo</p>
+               </p>
             <div class="fotter-message flex">
                 <div class="date">21.09.2021, 11:25</div>
                 <div class="username">Petro Ivanovych</div>
