--- a/fans.html
+++ b/fans.html
@@ -65,21 +65,21 @@
                <h2 class="section-hedaer">Звернення</h2>
                <div id="bgimage"></div>
                <div class="text-content text-content-fan "><div></div>
-            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsa laboriosam itaque suscipit distinctio numquam fugiat illo accusamus minus nemo neque repudiandae necessitatibus incidunt, esse, placeat pariatur nobis asperiores ratione.
-            Reiciendis non beatae consectetur ex iste aspernatur expedita asperiores. Rem dolorem sed pariatur at dolorum iusto nemo, animi, laudantium est ad excepturi perferendis quasi blanditiis q</p>
+            <p class="paragraph">Для тих, хто хоче засвоїти техніку японського фехтування, пропонуємо звертатися у Львівський клуб кендо «Lviv Kendo Kai»! У них є набір в групи для дорослих та дітей. Тому звертайтеся за адресою: Львівська гімназія міжнародних відносин ім. В.Стуса, вул. Повстанська, 14, м. Львів. А детальнішу інформацію можна отримати тут: www.facebook.com/pg/LvivKendoKai</p>
             <div class="fotter-message flex">
-                <div class="date">21.09.2021, 21:14</div>
+                <div class="date">21.09.21, 21:14</div>
                 <div class="username">KendoFan</div>
             </div>
         </div>
-        <div class="text-content text-content-fan lastHardcode">
-            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsa laboriosam itaque suscipit distinctio numquam fugiat illo accusamus minus nemo neque repudiandae necessitatibus incidunt, esse, placeat pariatur nobis asperiores ratione.
+        <div class="text-content text-content-fan">
+            <p class="paragraph">В рамках змагань «Кубок Галичини III» відбуватимуться турніри з кендо. Тож Львівська Обласна Федерація Кендо та клуб «Львів Кендо Кай» запрошують усіх охочих приходити на турніри та семінари з кендо. Побачити та відчути усі особливості цього виду бойового мистецтва можна буде 4 березня о 10:00 за адресою:  м. Львів, вулиця Жовківська, 53.
                </p>
             <div class="fotter-message flex">
-                <div class="date">21.09.2021, 11:25</div>
+                <div class="date">21.09.21, 11:25</div>
                 <div class="username">Petro Ivanovych</div>
             </div>
         </div>
+        <div class="lastHardcode"></div>
         <div class="fan-comment-fields flex-spb text-content">
 <textarea name="fan-message" id="fan-message" placeholder="Написати звернення..."></textarea>
 <button class="button">Send</button>
