--- a/fans.html
+++ b/fans.html
@@ -61,8 +61,7 @@
     </nav>
     <div class="clear3"></div>
         <content class="content-fans">
-            <div id="bgimage"><img src="./img/favpng_young-samurai-the-way-of-the-sword-kenjutsu-kendo-japanese-martial-arts.png"></div>
-               <h2 class="section-hedaer">Звернення</h2>
+                  <h2 class="section-hedaer">Останні повідомлення</h2>
                <div id="bgimage"></div>
                <div class="text-content text-content-fan "><div></div>
             <p class="paragraph">Для тих, хто хоче засвоїти техніку японського фехтування, пропонуємо звертатися у Львівський клуб кендо «Lviv Kendo Kai»! У них є набір в групи для дорослих та дітей. Тому звертайтеся за адресою: Львівська гімназія міжнародних відносин ім. В.Стуса, вул. Повстанська, 14, м. Львів. А детальнішу інформацію можна отримати тут: www.facebook.com/pg/LvivKendoKai</p>
